# TP_Reseau_3

./: .gitignore  README.md
TPReseau3/: CMakeLists.txt
TPReseau3/ClientServer/: CMakeLists.txt  ClientServer.cpp
TPReseau3/NetworkLib/: CMakeLists.txt
TPReseau3/NetworkLib/include/: Connection.h  NetworkLib.h  Terminal.h
TPReseau3/NetworkLib/src/: Connection.cpp  ConnectionTCP.cpp  ConnectionUDP.cpp  Terminal.cpp
TPReseau3/SerialCompil/: CMakeLists.txt
TPReseau3/SerialCompil/include/: Deserializer.h  Player.h  Quaternion.h  Serializer.h  Vector3.h
TPReseau3/SerialCompil/src/: IntCompressor.cpp  Player.cpp  Serializer.cpp  Vector3.cpp
TPReseau3/TPReseau3/: CMakeLists.txt  ClassRegistry.h  Enemy.cpp  GameObject.cpp  GameObject.h  LinkingContext.cpp  LinkingContext.h  ReplicationManager.cpp  ReplicationManager.h  TPReseau3.cpp  TPReseau3.h
TPReseau3/TPReseau3/NetworkLib/: CMakeLists.txt
TPReseau3/TPReseau3/NetworkLib/include/: ConnectionTCP.h  ConnectionUDP.h
TPReseau3/TPReseau3/NetworkLib/src/: NetworkLib.cpp
TPReseau3/TPReseau3/SerialCompil/: CMakeLists.txt
TPReseau3/TPReseau3/SerialCompil/include/: FloatCompressor.h  IntCompressor.h  Quaternion.h  QuaternionCompressor.h  Serializer.h  Vector3.h
TPReseau3/TPReseau3/SerialCompil/src/: Deserializer.cpp  FloatCompressor.cpp  QuaternionCompressor.cpp  Serializer.cpp
TPReseau3/TPReseau3/include/: ClassRegistry.h  Enemy.h  GameObject.h  LinkingContext.h  Player.h  ReplicationManager.h
TPReseau3/TPReseau3/src/: ClassRegistry.cpp  Enemy.cpp  GameObject.cpp  LinkingContext.cpp  Player.cpp  ReplicationManager.cpp
